[gd_scene load_steps=2 format=3 uid="uid://dkwqp7bvnmh5x"]

[ext_resource type="Script" uid="uid://dut4fxba4flm1" path="res://ui/main_menu.gd" id="1_0xkya"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xkya")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Red Horizon"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="SinglePlayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Single Player"

[node name="HostMultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Host Multiplayer"

[node name="JoinMultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Join Multiplayer"

[node name="JoinContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
text = "Enter Host IP:"
horizontal_alignment = 1

[node name="IPInput" type="LineEdit" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
placeholder_text = "192.168.1.100"
alignment = 1

[node name="ConnectButton" type="Button" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
text = "Connect"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Quit"
